Changed structure of code to be constructors in enemy and item. Added rotation of item. Enemy ball bounces

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <script src="sketch.js"></script>
     <script src="player.js"></script>
     <script src="hand.js"></script>
-    <script src="NPC.js"></script>
+    <script src="item.js"></script>
     <script src="p5.collide2d.js"></script>
+    <script src="phys.js"></script>
   </head>
   <body>
   </body>
