--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="item.js"></script>
     <script src="p5.collide2d.js"></script>
     <script src="phys.js"></script>
+    <script src="tower.js"></script>
   </head>
   <body>
   </body>
