--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="p5.collide2d.js"></script>
     <script src="phys.js"></script>
     <script src="tower.js"></script>
+    <script src="menu.js"></script>
   </head>
   <body>
   </body>
