added different sprites for each tower

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <script src="hand.js"></script>
     <script src="item.js"></script>
     <script src="p5.collide2d.js"></script>
-    <script src="phys.js"></script>
+    <script src="enemies.js"></script>
     <script src="tower.js"></script>
     <script src="menu.js"></script>
-  </head>
+    </head>
   <body>
   </body>
 </html>
