added instructions and started working on enemy sprites + new background. Gun in Progress

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="enemies.js"></script>
     <script src="tower.js"></script>
     <script src="menu.js"></script>
+    <script src="gun.js"></script>
     </head>
   <body>
   </body>
