working on drops

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <script src="p5.collide2d.js"></script>
     <script src="enemies.js"></script>
     <script src="tower.js"></script>
-    <script src="menu.js"></script>
+    <scritp src="drops.js"></scritp>
     <script src="gun.js"></script>
+    <script src="menu.js"></script>
     </head>
   <body>
   </body>
