added non working drops

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="p5.collide2d.js"></script>
     <script src="enemies.js"></script>
     <script src="tower.js"></script>
-    <scritp src="drops.js"></scritp>
+    <script src="drops.js"></script>
     <script src="gun.js"></script>
     <script src="menu.js"></script>
     </head>
